--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <version>RELEASE</version>
     <name>ReminderBot</name>
     <description>ReminderBot</description>
-    <url>https://github.com/egas77/java_tele_bot.git</url>
+    <url>https://github.com/egas77/ReminderBot.git</url>
     <properties>
         <java.version>17</java.version>
         <timestamp>${maven.build.timestamp}</timestamp>
